adding local file and upload of cracker binaries
