# src/dba/models/CrackerBinaryFactory.php
@@ -32,7 +32,7 @@ class CrackerBinaryFactory extends AbstractModelFactory {
    * @return CrackerBinary
    */
   function getNullObject(): CrackerBinary {
-    return new CrackerBinary(-1, null, null, null, null);
+    return new CrackerBinary(-1, null, null, null, null, null);
   }
   
   /**
@@ -45,6 +45,6 @@ class CrackerBinaryFactory extends AbstractModelFactory {
       $conv[strtolower($key)] = $val;
     }
     $dict = $conv;
-    return new CrackerBinary($dict['crackerbinaryid'], $dict['crackerbinarytypeid'], $dict['version'], $dict['downloadurl'], $dict['binaryname']);
+    return new CrackerBinary($dict['crackerbinaryid'], $dict['crackerbinarytypeid'], $dict['version'], $dict['downloadurl'], $dict['binaryname'], $dict['filename']);
   }
 }
